[package]
name = "splits-io-api"
version = "0.2.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/splits-io-api/"
repository = "https://github.com/LiveSplit/splits-io-api"
license = "Apache-2.0/MIT"
description = "Bindings to the Splits.io API for Rust."
readme = "README.md"
keywords = ["splits-io", "speedrun", "livesplit", "web", "async"]
categories = ["network-programming", "api-bindings"]
include = [
    "/src/*",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md"
]

[dependencies]
http = "0.2.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
snafu = { version = "0.6.0", default-features = false, features = ["std"] }
url = "2.1.0"
uuid = { version = "0.8.1", default-features = false, features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "0.14.1", default-features = false, features = ["tcp", "client", "http2"] }

[target.'cfg(all(any(target_os = "linux", target_family = "windows", target_os = "macos"), any(target_arch = "x86", target_arch = "x86_64", target_arch = "arm", target_arch = "aarch64")))'.dependencies]
hyper-rustls = { version = "0.23.0", default-features = false, features = ["native-tokio", "http2", "tls12", "logging"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(all(any(target_os = "linux", target_family = "windows", target_os = "macos"), any(target_arch = "x86", target_arch = "x86_64", target_arch = "arm", target_arch = "aarch64")))))'.dependencies]
hyper-tls = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.31"
wasm-bindgen = "0.2.51"
wasm-bindgen-futures = "0.4.4"
web-sys = { version = "0.3.32", features = ["Response", "Window", "RequestInit", "AbortSignal", "ObserverCallback", "ReferrerPolicy", "RequestCache", "RequestCredentials", "RequestInit", "RequestMode", "RequestRedirect", "Headers"] }

[dev-dependencies]
tokio = { version = "1.0.1", features = ["io-std", "macros"] }
anyhow = "1.0.25"
