[package]
name = "splits-io-api"
version = "0.3.1"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/splits-io-api/"
repository = "https://github.com/LiveSplit/splits-io-api"
license = "Apache-2.0/MIT"
description = "Bindings to the splits.io API for Rust."
readme = "README.md"
keywords = ["splits-io", "speedrun", "livesplit", "web", "async"]
categories = ["network-programming", "api-bindings"]
include = [
    "/src/*",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md"
]

[dependencies]
http = "0.2.0"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
snafu = { version = "0.7.1", default-features = false, features = ["std"] }
url = "2.1.0"
uuid = { version = "1.1.2", default-features = false, features = ["serde"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
hyper = { version = "0.14.1", default-features = false, features = ["tcp", "client", "http2"] }

[target.'cfg(all(any(target_os = "linux", target_family = "windows", target_os = "macos"), any(target_arch = "arm", target_arch = "aarch64", target_arch = "x86", target_arch = "x86_64", target_arch = "loongarch64", all(target_arch = "mips", target_endian = "little"), all(target_arch = "mips64", target_endian = "little"), all(target_arch = "powerpc", target_endian = "big"), target_arch = "powerpc64", target_arch = "riscv64", target_arch = "s390x")))'.dependencies]
hyper-rustls = { version = "0.24.1", default-features = false, features = ["native-tokio", "http2", "tls12"] }

[target.'cfg(all(not(target_family = "wasm"), not(all(any(target_os = "linux", target_family = "windows", target_os = "macos"), any(target_arch = "arm", target_arch = "aarch64", target_arch = "x86", target_arch = "x86_64", target_arch = "loongarch64", all(target_arch = "mips", target_endian = "little"), all(target_arch = "mips64", target_endian = "little"), all(target_arch = "powerpc", target_endian = "big"), target_arch = "powerpc64", target_arch = "riscv64", target_arch = "s390x")))))'.dependencies]
hyper-tls = "0.5.0"

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.31"
wasm-bindgen = "0.2.51"
wasm-bindgen-futures = "0.4.4"
web-sys = { version = "0.3.32", features = ["Response", "Window", "RequestInit", "AbortSignal", "ObserverCallback", "ReferrerPolicy", "RequestCache", "RequestCredentials", "RequestInit", "RequestMode", "RequestRedirect", "Headers"] }

[dev-dependencies]
tokio = { version = "1.0.1", features = ["io-std", "macros"] }
anyhow = "1.0.25"
