[package]
name = "splits-io-api"
version = "0.4.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/splits-io-api/"
repository = "https://github.com/LiveSplit/splits-io-api"
license = "Apache-2.0/MIT"
description = "Bindings to the splits.io API for Rust."
readme = "README.md"
keywords = ["splits-io", "speedrun", "livesplit", "web", "async"]
categories = ["network-programming", "api-bindings"]
include = [
    "/src/*",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md"
]

[dependencies]
serde = "1.0.189"
serde_derive = "1.0.189"
uuid = { version = "1.6.1", default-features = false, features = ["serde"] }
reqwest = { version = "0.11.23", default-features = false, features = ["json", "multipart"] }

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls-webpki-roots"]

[dev-dependencies]
tokio = { version = "1.0.1", features = ["io-std", "macros"] }
anyhow = "1.0.25"
